--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev -p 3001",
+    "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
     "test": "playwright test",
@@ -32,12 +32,47 @@
     "test:realtime:all": "ts-node tests/realtime/test-runner.ts",
     "test:realtime:coverage": "vitest --coverage tests/realtime",
     "test:realtime:ui": "vitest --ui tests/realtime",
-    "test:realtime:watch": "vitest tests/realtime"
+    "test:realtime:watch": "vitest tests/realtime",
+    "test:langgraph": "vitest run tests/langgraph",
+    "test:langgraph:watch": "vitest tests/langgraph",
+    "test:langgraph:coverage": "vitest --coverage tests/langgraph",
+    "test:config": "jest tests/config",
+    "test:security": "jest tests/security",
+    "build:docker": "docker build -t funerally-app .",
+    "docker:dev": "docker-compose -f docker-compose.yml up -d",
+    "docker:prod": "docker-compose -f docker-compose.prod.yml up -d",
+    "db:migrate": "node scripts/migrate.js",
+    "db:rollback": "bash scripts/rollback.sh",
+    "health:check": "node scripts/health-check.js",
+    "config:validate": "node scripts/validate-config.js",
+    "cache:clear": "node scripts/clear-cache.js",
+    "logs:view": "docker-compose logs -f",
+    "security:audit": "npm audit && npm run test:security",
+    "performance:test": "k6 run tests/performance/api-load-test.js",
+    "mcp:init": "node scripts/init-mcp-servers.js",
+    "mcp:start": "mcp start",
+    "mcp:stop": "mcp stop",
+    "mcp:status": "mcp status",
+    "mcp:logs": "mcp logs --follow",
+    "mcp:restart": "npm run mcp:stop && npm run mcp:start",
+    "mcp:test": "node scripts/test-mcp-connection.js",
+    "setup:supabase": "node scripts/setup-supabase.js",
+    "setup:oauth": "node scripts/configure-oauth.js",
+    "setup:all": "npm run mcp:init && npm run setup:supabase && npm run setup:oauth"
   },
   "dependencies": {
     "@auth/core": "latest",
     "@clerk/nextjs": "latest",
+    "@google/generative-ai": "^0.17.0",
     "@hookform/resolvers": "^3.9.1",
+    "@langchain/anthropic": "^0.1.0",
+    "@langchain/community": "^0.0.57",
+    "@langchain/core": "^0.2.0",
+    "@langchain/google-genai": "^0.0.23",
+    "@langchain/langgraph": "^0.0.34",
+    "@langchain/openai": "^0.0.34",
+    "@langchain/redis": "^0.0.4",
+    "@langchain/textsplitters": "^0.0.3",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -67,22 +102,46 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@supabase/supabase-js": "latest",
     "@types/bcryptjs": "^3.0.0",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
+    "@types/express-rate-limit": "^6.0.0",
+    "@types/express-session": "^1.17.10",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
+    "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.4.20",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
+    "compression": "^1.7.4",
+    "connect-redis": "^7.1.0",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "8.5.1",
+    "express-rate-limit": "^7.5.1",
+    "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.2.0",
     "input-otp": "1.4.1",
+    "ioredis": "^5.3.2",
+    "jsonwebtoken": "^9.0.2",
+    "lru-cache": "^11.1.0",
     "lucide-react": "^0.454.0",
+    "mammoth": "^1.6.0",
+    "multer": "^1.4.5-lts.1",
     "next": "15.2.4",
     "next-auth": "latest",
     "next-intl": "^4.1.0",
     "next-themes": "latest",
+    "node-cron": "^3.0.2",
     "nodemailer": "latest",
+    "p-retry": "^6.2.0",
+    "p-throttle": "^6.1.0",
+    "pdfkit": "^0.14.0",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0-rc2",
+    "rate-limit-redis": "^4.2.0",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
@@ -90,15 +149,22 @@
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "latest",
+    "redis": "^4.7.1",
+    "sharp": "^0.32.6",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1",
     "vaul": "^0.9.6",
+    "winston": "^3.11.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
     "@playwright/test": "^1.45.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^22",
     "@types/pg": "^8.11.10",
     "@types/react": "^19",
