feat: Add migration scripts and SQL for funeral venues and services
- Updated package.json to include new setup:intake script.
- Created run-migration.md with instructions for fixing missing tables error.
- Added run-intake-migration.js script for executing intake migrations.
- Created SQL migration files for funeral venues and services, including sample data and RLS policies.
- Established intake-related tables and RLS policies for secure access control.

--- a/package.json
+++ b/package.json
@@ -58,21 +58,23 @@
     "mcp:test": "node scripts/test-mcp-connection.js",
     "setup:supabase": "node scripts/setup-supabase.js",
     "setup:oauth": "node scripts/configure-oauth.js",
-    "setup:all": "npm run mcp:init && npm run setup:supabase && npm run setup:oauth"
+    "setup:intake": "node scripts/run-intake-migration.js",
+    "setup:all": "npm run mcp:init && npm run setup:supabase && npm run setup:oauth && npm run setup:intake"
   },
   "dependencies": {
     "@auth/core": "latest",
     "@clerk/nextjs": "latest",
-    "@google/generative-ai": "^0.17.0",
+    "@google/generative-ai": "^0.17.2",
     "@hookform/resolvers": "^3.9.1",
     "@langchain/anthropic": "^0.1.0",
     "@langchain/community": "^0.0.57",
-    "@langchain/core": "^0.2.0",
+    "@langchain/core": "^0.2.36",
     "@langchain/google-genai": "^0.0.23",
     "@langchain/langgraph": "^0.0.34",
     "@langchain/openai": "^0.0.34",
     "@langchain/redis": "^0.0.4",
     "@langchain/textsplitters": "^0.0.3",
+    "@next-auth/supabase-adapter": "^0.2.1",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -100,6 +102,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "latest",
     "@types/bcryptjs": "^3.0.0",
     "@types/compression": "^1.7.5",
