Refactor project references from "funerally" to "farewelly" across multiple files, including architecture, implementation, scripts, and tests. Update Docker build configurations, OAuth tool messages, and compliance system scripts to reflect the new project name. Introduce new demo scripts for Dutch legal compliance and Gemini security consultation. Ensure all paths and references are consistent with the new naming convention.

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "test:langgraph:coverage": "vitest --coverage tests/langgraph",
     "test:config": "jest tests/config",
     "test:security": "jest tests/security",
-    "build:docker": "docker build -t funerally-app .",
+    "build:docker": "docker build -t farewelly-app .",
     "docker:dev": "docker-compose -f docker-compose.yml up -d",
     "docker:prod": "docker-compose -f docker-compose.prod.yml up -d",
     "db:migrate": "node scripts/migrate.js",
